# BWIP-V2

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  apps.py  backends.py  forms.py  models.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py
apps/api/: __init__.py  admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
apps/api/migrations/: 0001_initial.py  0002_initial.py
apps/audit/: __init__.py  admin.py  apps.py  middleware.py  models.py  signals.py
apps/audit/migrations/: 0001_initial.py  0002_initial.py  0003_alter_auditlog_location_alter_auditlog_poster.py
apps/audit/tests/: __init__.py
apps/core/: __init__.py  exceptions.py  models.py  utils.py  views.py
apps/core/management/commands/: seed_data.py
apps/core/tests/: __init__.py
apps/locations/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/locations/migrations/: 0001_initial.py  0002_initial.py
apps/locations/tests/: __init__.py
apps/organisations/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/organisations/migrations/: 0001_initial.py
apps/organisations/tests/: __init__.py
apps/posters/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/posters/migrations/: 0001_initial.py  0002_add_override_and_notification_fields.py
apps/posters/tests/: __init__.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
docs/: HANDOVER_BRIEF.md
scripts/: seed_data.py
services/: __init__.py
services/beaches_api/: __init__.py  client.py  exceptions.py  schemas.py
services/beaches_api/tests/: __init__.py
services/ckan/: __init__.py  client.py
services/ckan/tests/: __init__.py
services/pdf_generation/: __init__.py  exceptions.py  generator.py  qr_codes.py  templates.py
services/pdf_generation/tests/: __init__.py
templates/: base.html
templates/accounts/: login.html  profile.html  profile_edit.html
templates/includes/: _footer.html  _messages.html  _navbar.html  _pagination.html
templates/locations/: location_detail.html  location_list.html
templates/pdf/: 1a_en.html  1b_en.html  1c_en.html  2a_en.html  2b_en.html  base_poster.html
templates/posters/: dashboard.html  detail.html  generate.html  history.html
tests/: conftest.py  factories.py
